# verbatim

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ui/: index.html  requirements-ui.txt  server.py
verbatim/: __init__.py  cli.py  runner.py
